django-bingo 1.0.1 ():
	* fixed: only tweet on Game creation, not when editing Game objects.